
SWIG_OUTPUTS=core.java core.java.in
EXTRA_DIST=World.java URI.java Node.java Statement.java Iterator.java \
Serializer.java Stream.java Parser.java Storage.java Model.java \
Hash.java Query.java QueryResults.java \
$(SWIG_OUTPUTS)

clean-local: clean-java

clean-java:
	rm -f *.class SWIGTYPE_p_*.java
