# -*- Mode: Makefile -*-
#
# Makefile.am - automake file for Ruby RDF classes for Redland
#
# $Id$
#
# Copyright (C) 2004 David Beckett - http://purl.org/net/dajobe/
# Institute for Learning and Research Technology - http://www.ilrt.bris.ac.uk/
# University of Bristol - http://www.bristol.ac.uk/
# 
# This package is Free Software or Open Source available under the
# following licenses (these are alternatives):
#   1. GNU Lesser General Public License (LGPL)
#   2. GNU General Public License (GPL)
#   3. Mozilla Public License (MPL)
# 
# See LICENSE.html or LICENSE.txt at the top of this package for the
# full license terms.
#

rubydir=/usr/lib/ruby/@RUBY_VERSION@/rdf/redland

ruby_DATA=$(EXTRA_DIST)

EXTRA_DIST=constants.rb convert_owl.rb convertfoaf.rb dc.rb model.rb \
node.rb parser.rb query.rb resource.rb serializer.rb statement.rb \
store.rb stream.rb uri.rb util.rb

SUBDIRS=schemas

