# -*- Mode: Makefile -*-
#
# Makefile.am - automake file for Ruby RDF classes for Redland
#
# Copyright (C) 2004-2005 David Beckett - http://www.dajobe.org/
# Copyright (C) 2004-2005 University of Bristol - http://www.bristol.ac.uk/
# 
# This package is Free Software and part of Redland http://librdf.org/
# 
# It is licensed under the following three licenses as alternatives:
#   1. GNU Lesser General Public License (LGPL) V2.1 or any newer version
#   2. GNU General Public License (GPL) V2 or any newer version
#   3. Apache License, V2.0 or any newer version
# 
# You may not use this file except in compliance with at least one of
# the above three licenses.
# 
# See LICENSE.html or LICENSE.txt at the top of this package for the
# full license terms.
#

rubyinstalldir=@RUBY_INSTALLDIR@/rdf/redland

rubyinstall_DATA=$(EXTRA_DIST)

EXTRA_DIST=constants.rb convert_owl.rb convertfoaf.rb dc.rb model.rb \
node.rb parser.rb query.rb resource.rb serializer.rb statement.rb \
store.rb stream.rb uri.rb util.rb queryresults.rb

SUBDIRS=schemas

